@@ -296,11 +296,18 @@ cdef extern from "ode/ode.h":
              dReal I11, dReal I22, dReal I33,
              dReal I12, dReal I13, dReal I23)
     void dMassSetSphere (dMass *, dReal density, dReal radius)
+    void dMassSetSphereTotal (dMass *, dReal total_mass, dReal radius)
     void dMassSetCappedCylinder (dMass *, dReal density, int direction,
+                 dReal a, dReal b)
+    void dMassSetCappedCylinderTotal (dMass *, dReal total_mass, int direction,
                  dReal a, dReal b)
     void dMassSetCylinder (dMass *, dReal density, int direction,
           dReal radius, dReal length)
+    void dMassSetCylinderTotal (dMass *, dReal total_mass, int direction,
+          dReal radius, dReal length)
     void dMassSetBox (dMass *, dReal density,
+          dReal lx, dReal ly, dReal lz)
+    void dMassSetBoxTotal (dMass *, dReal total_mass,
           dReal lx, dReal ly, dReal lz)
     void dMassAdjust (dMass *, dReal newmass)
     void dMassTranslate (dMass *, dReal x, dReal y, dReal z)
